--- a/index.html
+++ b/index.html
@@ -6,5 +6,42 @@
     <title>CSS Flexbox Navigation</title>
     <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="nav-default">
+      <ul>
+        <li><a href="/"> Work </a></li>
+        <li><a href="/"> Blok</a></li>
+        <li><a href="/"> Contact</a></li>
+      </ul>
+    </nav>
+
+    <nav class="nav-with-logo">
+      <ul>
+        <li><h2>Mockup</h2></li>
+        <li><a href="/"> Work </a></li>
+        <li><a href="/"> Blok</a></li>
+        <li><a href="/"> Contact</a></li>
+      </ul>
+    </nav>
+
+    <nav class="nav-with-name">
+      <ul>
+        <li><h2>Mockup Company</h2></li>
+        <li><a href="/"> Solutions </a></li>
+        <li><a href="/"> About</a></li>
+        <li><a href="/"> Pricing</a></li>
+        <li><a href="#" class="btn btn-square">Log in</a></li>
+        <li><a href="/">Get Started</a></li>
+      </ul>
+    </nav>
+
+    <nav class="nav-with-blog">
+      <ul>
+        <li><h2>Mockup Blog</h2></li>
+        <li><a href="/"> Blog </a></li>
+        <li><a href="/"> About</a></li>
+        <li><a href="/"> Contact</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
