--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a href="/"> About</a></li>
         <li><a href="/"> Pricing</a></li>
         <li><a href="#" class="btn btn-square">Log in</a></li>
-        <li><a href="/">Get Started</a></li>
+        <li><a href="/" class="btn btn-square">Get Started</a></li>
       </ul>
     </nav>
 
@@ -41,6 +41,13 @@
         <li><a href="/"> Blog </a></li>
         <li><a href="/"> About</a></li>
         <li><a href="/"> Contact</a></li>
+
+        <li>
+          <a href="/"><img src="/assets/img/Icon-facebook.png" alt="" /></a>
+          <a href="/"><img src="/assets/img/Icon-twitter.png" alt="" /></a>
+          <a href="/"><img src="/assets/img/Icon-instagram.png" alt="" /></a>
+          <a href="/"><img src="/assets/img/Icon-linkedin.png" alt="" /></a>
+        </li>
       </ul>
     </nav>
   </body>
